--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         </activity>
         <activity android:name=".SignupActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".Calendar"/>
+        <activity android:name=".GoalTracking"/>
+
 
     </application>
 
